# jamf-mcp

./: .env.example  CLAUDE.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
src/jamf_mcp/: __init__.py  config.py  response.py  server.py
src/jamf_mcp/api/: pro.py  protect.py  security.py
src/jamf_mcp/tools/: setup.py
src/jamf_mcp/tools/pro/: api_mgmt.py  apps.py  computers.py  groups.py  mobile_devices.py  org.py  policies.py  printers.py  scripts.py  users.py
src/jamf_mcp/tools/protect/: alerts.py  computers.py
src/jamf_mcp/tools/security/: risk.py
