[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamf-mcp"
version = "0.1.0"
description = "Claude Desktop MCP server for Jamf Pro, Jamf Protect, and Jamf Security Cloud"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
jamf-mcp = "jamf_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jamf_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
